TLC-17: Add the age categories columns

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,1 +1,18 @@
 mksreports.title=MKS Reports
+
+${project.parent.artifactId}.report.registerLogbook.rowNumber.label=#
+${project.parent.artifactId}.report.registerLogbook.identifier.label=Identifier
+${project.parent.artifactId}.report.registerLogbook.patientName.label=Patient Name
+${project.parent.artifactId}.report.registerLogbook.isOfCategory.label=X
+${project.parent.artifactId}.report.registerLogbook.ageCategory1.label=0-28 days
+${project.parent.artifactId}.report.registerLogbook.ageCategory2.label=1-12 months
+${project.parent.artifactId}.report.registerLogbook.ageCategory3.label=1-4 years
+${project.parent.artifactId}.report.registerLogbook.ageCategory4.label=5-14 years
+${project.parent.artifactId}.report.registerLogbook.ageCategory5.label=15-24 years
+${project.parent.artifactId}.report.registerLogbook.ageCategory6.label=25-49 years
+${project.parent.artifactId}.report.registerLogbook.ageCategory7.label=50-64 years
+${project.parent.artifactId}.report.registerLogbook.ageCategory8.label=_> 65 years
+${project.parent.artifactId}.report.registerLogbook.genderCategoryFemale.label=Women
+${project.parent.artifactId}.report.registerLogbook.genderCategoryMale.label=Man
+${project.parent.artifactId}.report.registerLogbook.genderCategoryOther.label=Other
+${project.parent.artifactId}.report.registerLogbook.addressAndPhone.label=Address and Phone
