--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -17,3 +17,6 @@ ${project.parent.artifactId}.report.outpatientRecordBook.genderCategoryMale.labe
 ${project.parent.artifactId}.report.outpatientRecordBook.genderCategoryOther.label=Other
 ${project.parent.artifactId}.report.outpatientRecordBook.addressAndPhone.label=Address and Phone
 ${project.parent.artifactId}.report.outpatientRecordBook.symptoms.label=Symptoms
+${project.parent.artifactId}.report.outpatientRecordBook.diagnosis.label=Diagnosis
+${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
+${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
