--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -20,4 +20,5 @@ ${project.parent.artifactId}.report.outpatientRecordBook.addressAndPhone.label=A
 ${project.parent.artifactId}.report.outpatientRecordBook.symptoms.label=Symptoms
 ${project.parent.artifactId}.report.outpatientRecordBook.diagnosis.label=Diagnosis
 ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
+${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
