TLC-17: Add the 'weight on age' calculated field

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,4 +23,5 @@ ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Refe
 ${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnHeight.label=Weight/Height
+${project.parent.artifactId}.report.outpatientRecordBook.weightOnAge.label=Weight/Age
 ${project.parent.artifactId}.report.outpatientRecordBook.na.label=N/A
