MRSCMNS-51: Add the 'Treatment' field
Use the OrderForVisitDataDefinition to display all orders of a visit
	modified:   api/src/main/java/org/openmrs/module/mksreports/reports/OutpatientRecordBook.java

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ ${project.parent.artifactId}.report.outpatientRecordBook.genderCategoryOther.lab
 ${project.parent.artifactId}.report.outpatientRecordBook.addressAndPhone.label=Address and Phone
 ${project.parent.artifactId}.report.outpatientRecordBook.symptoms.label=Symptoms
 ${project.parent.artifactId}.report.outpatientRecordBook.diagnosis.label=Diagnosis
+${project.parent.artifactId}.report.outpatientRecordBook.treatment.label=Treatment
 ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
 ${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
