--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ ${project.parent.artifactId}.report.outpatientRecordBook.treatment.label=Treatme
 ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
 ${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
+${project.parent.artifactId}.report.outpatientRecordBook.imciProgram.label=IMCI Program
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnHeight.label=Weight/Height
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnAge.label=Weight/Age
 ${project.parent.artifactId}.report.outpatientRecordBook.na.label=N/A
