MRSCMNS-51: Add the 'Payment Type' field and add CodedToShortNameConverter to display short name of concepts
Converter to return short name for coded observations, instead of the default ObsValueConverter that returns the FSN
	new file:   api/src/main/java/org/openmrs/module/mksreports/data/converter/CodedToShortNameConverter.java

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ ${project.parent.artifactId}.report.outpatientRecordBook.diagnosis.label=Diagnos
 ${project.parent.artifactId}.report.outpatientRecordBook.treatment.label=Treatment
 ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
 ${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
+${project.parent.artifactId}.report.outpatientRecordBook.paymentType.label=Payment Type
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
 ${project.parent.artifactId}.report.outpatientRecordBook.imciProgram.label=IMCI Program
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnHeight.label=Weight/Height
