MRSCMNS-51: Add the 'new case/old case' fields

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -22,6 +22,8 @@ ${project.parent.artifactId}.report.outpatientRecordBook.symptoms.label=Symptoms
 ${project.parent.artifactId}.report.outpatientRecordBook.diagnosis.label=Diagnosis
 ${project.parent.artifactId}.report.outpatientRecordBook.treatment.label=Treatment
 ${project.parent.artifactId}.report.outpatientRecordBook.referredFrom.label=Referred From
+${project.parent.artifactId}.report.outpatientRecordBook.newCase.label=New Case
+${project.parent.artifactId}.report.outpatientRecordBook.oldCase.label=Old Case
 ${project.parent.artifactId}.report.outpatientRecordBook.referredTo.label=Referred To
 ${project.parent.artifactId}.report.outpatientRecordBook.paymentType.label=Payment Type
 ${project.parent.artifactId}.report.outpatientRecordBook.otherNotes.label=Other Notes
