MRSCMNS-53: Complete HC1 OPD Consultation report and tests
	modified:   api/src/main/java/org/openmrs/module/mksreports/reports/OutpatientConsultationReportManager.java
	modified:   api/src/main/resources/messages.properties

Modify location of data set xml files
	renamed:    api/src/test/resources/outpatientConsultationTestDataset.xml -> api/src/test/resources/org/openmrs/module/mksreports/include/outpatientConsultationTestDataset.xml
	renamed:    api/src/test/resources/reportingTestDataset.xml -> api/src/test/resources/org/openmrs/module/mksreports/include/reportingTestDataset.xml

Testing of the report
	modified:   api/src/test/resources/testAppDataDir/configuration/jsonkeyvalues/config.json

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -31,3 +31,9 @@ ${project.parent.artifactId}.report.outpatientRecordBook.imciProgram.label=IMCI 
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnHeight.label=Weight/Height
 ${project.parent.artifactId}.report.outpatientRecordBook.weightOnAge.label=Weight/Age
 ${project.parent.artifactId}.report.outpatientRecordBook.na.label=N/A
+
+${project.parent.artifactId}.report.opdconsult.males.label=Males
+${project.parent.artifactId}.report.opdconsult.females.label=Females
+${project.parent.artifactId}.report.opdconsult.total.label=Total
+${project.parent.artifactId}.report.opdconsult.referredTo.label=Referred To
+${project.parent.artifactId}.report.opdconsult.hefId.label=Use HEF
