--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -50,3 +50,21 @@ ${project.parent.artifactId}.patienthistory.demographics.fulladdress=Address
 ${project.parent.artifactId}.patienthistory.requestedby=Requested By
 ${project.parent.artifactId}.patienthistory.page=Page
 ${project.parent.artifactId}.patienthistory.of=of
+
+${project.parent.artifactId}.report.newEpisodesOfDiseases.reportName=New Episodes of Diseases
+${project.parent.artifactId}.report.newEpisodesOfDiseases.reportDescription=MSPP report required by Haitian MoH to any clinic in Haiti
+${project.parent.artifactId}.report.newEpisodesOfDiseases.title.label=New Episodes of Diseases
+${project.parent.artifactId}.report.newEpisodesOfDiseases.allOtherDiagnoses.label=All other diagnoses
+${project.parent.artifactId}.report.newEpisodesOfDiseases.maladies.label=Maladies
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory1.label=<1 year
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory2.label=1-4 years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory3.label=5-9 years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory4.label=10-14 years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory5.label=15-24 years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory6.label=25-49 years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory7.label=50+ years
+${project.parent.artifactId}.report.newEpisodesOfDiseases.total.label=Total
+${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.label=Total referred cases
+
+${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
+${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
