--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -50,3 +50,21 @@ ${project.parent.artifactId}.patienthistory.demographics.fulladdress=Adresse
 ${project.parent.artifactId}.patienthistory.requestedby=Initi√© par
 ${project.parent.artifactId}.patienthistory.page=Page
 ${project.parent.artifactId}.patienthistory.of=de
+
+${project.parent.artifactId}.report.newEpisodesOfDiseases.reportName=New Episodes of Diseases (french)
+${project.parent.artifactId}.report.newEpisodesOfDiseases.reportDescription=MSPP report required by Haitian MoH to any clinic in Haiti (french)
+${project.parent.artifactId}.report.newEpisodesOfDiseases.title.label=Nouveau episodes / age
+${project.parent.artifactId}.report.newEpisodesOfDiseases.maladies.label=Maladies
+${project.parent.artifactId}.report.newEpisodesOfDiseases.allOtherDiagnoses.label=All other diagnoses
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory1.label=<1 an
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory2.label=1-4 ans
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory3.label=5-9 ans
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory4.label=10-14 ans
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory5.label=15-24 ans
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory6.label=25-49 ans
+${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory7.label=50 an et +
+${project.parent.artifactId}.report.newEpisodesOfDiseases.total.label=Total
+${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.label=Total des cas rÈfÈrÈs
+
+${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
+${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
