C2C-89: Add MSPP 'Repartition des visites' report

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -65,8 +65,27 @@ ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory6.label=25-
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory7.label=50+ years
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.total.label=Total
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.label=Total referred cases
-
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
+
 ${project.parent.artifactId}.report.lab.reportName=MSPP: Lab
 ${project.parent.artifactId}.report.lab.reportDescription=Lab report required by the Haitian MSPP
+
+${project.parent.artifactId}.report.visits.reportName=MSPP: Visits Report
+${project.parent.artifactId}.report.visits.reportDescription=Visits report required by the Haitian MSPP
+${project.parent.artifactId}.report.visits.date.range.label=Date range
+${project.parent.artifactId}.report.visits.to.label=To
+${project.parent.artifactId}.report.visits.natureOfVisits.label=Institutional
+${project.parent.artifactId}.report.visits.newVisits.label=New visits
+${project.parent.artifactId}.report.visits.subsequentVisits.label=Subsequent visits
+${project.parent.artifactId}.report.visits.categories.label=Categories
+${project.parent.artifactId}.report.visits.category1.label=Children under one year old
+${project.parent.artifactId}.report.visits.category2.label=Children aged 1 to 4 years old
+${project.parent.artifactId}.report.visits.category3.label=Children aged 5 to 9 years old
+${project.parent.artifactId}.report.visits.category4.label=Children aged 10 to 14
+${project.parent.artifactId}.report.visits.category5.label=Children aged 10 to 14
+${project.parent.artifactId}.report.visits.category6.label=Young adults aged 20 to 24
+${project.parent.artifactId}.report.visits.category7.label=Pregnant women
+${project.parent.artifactId}.report.visits.category8.label=Family planing clients
+${project.parent.artifactId}.report.visits.category9.label=Other adults
+${project.parent.artifactId}.report.visits.total.label=Total
