--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -65,9 +65,24 @@ ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory6.label=25-
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory7.label=50 an et +
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.total.label=Total
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.label=Total des cas référés
-
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
 
 ${project.parent.artifactId}.report.lab.reportName=MSPP: Examens de laboratoire
 ${project.parent.artifactId}.report.lab.reportDescription=Rapport des Examens de laboratoire demandé par le MSPP à Haiti
+
+${project.parent.artifactId}.report.visits.reportName.label=MSPP: Répartition des visites
+${project.parent.artifactId}.report.visits.reportDescription=Rapport de Répartition des visites demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.visits.date.range.label=Plage de dates
+${project.parent.artifactId}.report.visits.to.label=Au
+${project.parent.artifactId}.report.visits.natureOfVisits.label=Institutionelles
+${project.parent.artifactId}.report.visits.category1.label=Enfants de moins d'un an
+${project.parent.artifactId}.report.visits.category2.label=Enfants de 1 an à 4 ans
+${project.parent.artifactId}.report.visits.category3.label=Enfants de 5 ans à 9 ans
+${project.parent.artifactId}.report.visits.category4.label=Enfants de 10 ans à 14 ans
+${project.parent.artifactId}.report.visits.category5.label=Jeunes adultes de 15 ans à 19 ans
+${project.parent.artifactId}.report.visits.category6.label=Jeunes adultes de 20 ans à 24 ans
+${project.parent.artifactId}.report.visits.category7.label=Femmes enceintes
+${project.parent.artifactId}.report.visits.category8.label=Clients PF
+${project.parent.artifactId}.report.visits.category9.label=Autres adultes
+${project.parent.artifactId}.report.visits.total.label=Total
