C2C-72: Using Referral concept rather than Referred-to concept to be more definite

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -51,7 +51,7 @@ ${project.parent.artifactId}.patienthistory.requestedby=Initié par
 ${project.parent.artifactId}.patienthistory.page=Page
 ${project.parent.artifactId}.patienthistory.of=de
 
-${project.parent.artifactId}.report.newEpisodesOfDiseases.reportName=Nouveaux episodes
+${project.parent.artifactId}.report.newEpisodesOfDiseases.reportName=Nouveaux épisodes de maladie
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.reportDescription=MSPP: Nouveaux épisodes de maladie
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.title.label=Nouveau episodes / age
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.maladies.label=Maladies
