C2C-84: Adding MSPP 'Urgences' report (#27)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -89,3 +89,19 @@ ${project.parent.artifactId}.report.visits.category7.label=Pregnant women
 ${project.parent.artifactId}.report.visits.category8.label=Family planing clients
 ${project.parent.artifactId}.report.visits.category9.label=Other adults
 ${project.parent.artifactId}.report.visits.total.label=Total
+
+${project.parent.artifactId}.report.emergency.reportName=Emergency Report
+${project.parent.artifactId}.report.emergency.reportDescription=Emergency report required by the Haitian MSPP
+${project.parent.artifactId}.report.emergency.totalNumber.label=Total number
+${project.parent.artifactId}.report.emergency.referredCategory.label=Referred
+${project.parent.artifactId}.report.emergency.deceasedCategory.label=Deceased
+${project.parent.artifactId}.report.emergency.leftWithoutPermissionCategory.label=Left without permission
+${project.parent.artifactId}.report.emergency.notInCategory.label=Cared for
+${project.parent.artifactId}.report.emergency.men=Men
+${project.parent.artifactId}.report.emergency.women=Women
+${project.parent.artifactId}.report.emergency.children=Children
+${project.parent.artifactId}.report.emergency.boys=Boys
+${project.parent.artifactId}.report.emergency.girls=Girls
+${project.parent.artifactId}.report.emergency.0_14years=(0-14 years)
+${project.parent.artifactId}.report.emergency.above14years=(15 years and above)
+${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Medical and surgical emergency
