C2C-84: Fix non-utf8 characters

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -87,18 +87,18 @@ ${project.parent.artifactId}.report.visits.category8.label=Clients PF
 ${project.parent.artifactId}.report.visits.category9.label=Autres adultes
 ${project.parent.artifactId}.report.visits.total.label=Total
 
-${project.parent.artifactId}.report.emergency.reportName=Rapport d'urgence
-${project.parent.artifactId}.report.emergency.reportDescription=Rapport des Urgence demandé par le MSPP à Haiti
-${project.parent.artifactId}.report.emergency.totalNumber.label=Nombre
-${project.parent.artifactId}.report.emergency.referredCategory.label=Référés
-${project.parent.artifactId}.report.emergency.deceasedCategory.label=Décédés
+${project.parent.artifactId}.report.emergency.reportName=MSPP Urgences
+${project.parent.artifactId}.report.emergency.reportDescription=Rapport des Urgences demandÃ© par le MSPP Ã  Haiti
+${project.parent.artifactId}.report.emergency.totalNumber.label=Total
+${project.parent.artifactId}.report.emergency.referredCategory.label=RÃ©fÃ©rÃ©s
+${project.parent.artifactId}.report.emergency.deceasedCategory.label=DÃ©cÃ©dÃ©s
 ${project.parent.artifactId}.report.emergency.leftWithoutPermissionCategory.label=Partis sans autorisation
-${project.parent.artifactId}.report.emergency.notInCategory.label=Soignés
+${project.parent.artifactId}.report.emergency.notInCategory.label=SoignÃ©s
 ${project.parent.artifactId}.report.emergency.men=Hommes
 ${project.parent.artifactId}.report.emergency.women=Femmes
 ${project.parent.artifactId}.report.emergency.children=Enfants
-${project.parent.artifactId}.report.emergency.boys=Garçons 0-14 ans
+${project.parent.artifactId}.report.emergency.boys=GarÃ§ons 0-14 ans
 ${project.parent.artifactId}.report.emergency.girls=Filles
 ${project.parent.artifactId}.report.emergency.0_14years=(0-14 ans)
 ${project.parent.artifactId}.report.emergency.above14years=(15 ans et plus)
-${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Urgences médico chirurgicales
+${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Urgences mÃ©dico chirurgicales
