C2C-87: Adding 'Chronic Illnesses' report (#31)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -68,6 +68,20 @@ ${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.lab
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
 
+${project.parent.artifactId}.report.chronicIllnesses.reportName=MSPP Chronic Illnesses Report
+${project.parent.artifactId}.report.chronicIllnesses.reportDescription=Chronic Illnesses report required by the Haitian MSPP
+${project.parent.artifactId}.report.chronicIllnesses.conditions.label=Conditions
+${project.parent.artifactId}.report.chronicIllnesses.diagnoses.label=New Diagnoses
+${project.parent.artifactId}.report.chronicIllnesses.females.label=Females
+${project.parent.artifactId}.report.chronicIllnesses.males.label=Males
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory1.label=<10 years
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory2.label=10-14 years
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory3.label=15-19 years
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory4.label=20-24 years
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory5.label=25-49 years
+${project.parent.artifactId}.report.chronicIllnesses.ageCategory6.label=_> 50 years
+${project.parent.artifactId}.report.chronicIllnesses.totalReferredCases.label=Total referred cases
+
 ${project.parent.artifactId}.report.lab.reportName=MSPP Lab
 ${project.parent.artifactId}.report.lab.reportDescription=Lab report required by the Haitian MSPP
 
@@ -90,7 +104,7 @@ ${project.parent.artifactId}.report.visits.category8.label=Family planing client
 ${project.parent.artifactId}.report.visits.category9.label=Other adults
 ${project.parent.artifactId}.report.visits.total.label=Total
 
-${project.parent.artifactId}.report.emergency.reportName=Emergency Report
+${project.parent.artifactId}.report.emergency.reportName=MSPP Emergency Report
 ${project.parent.artifactId}.report.emergency.reportDescription=Emergency report required by the Haitian MSPP
 ${project.parent.artifactId}.report.emergency.totalNumber.label=Total number
 ${project.parent.artifactId}.report.emergency.referredCategory.label=Referred
@@ -105,3 +119,4 @@ ${project.parent.artifactId}.report.emergency.girls=Girls
 ${project.parent.artifactId}.report.emergency.0_14years=(0-14 years)
 ${project.parent.artifactId}.report.emergency.above14years=(15 years and above)
 ${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Medical and surgical emergency
+
