--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -116,3 +116,28 @@ ${project.parent.artifactId}.report.emergency.girls=Filles
 ${project.parent.artifactId}.report.emergency.0_14years=(0-14 ans)
 ${project.parent.artifactId}.report.emergency.above14years=(15 ans et plus)
 ${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Urgences médico-chirurgicales
+
+${project.parent.artifactId}.report.antenatal.reportName=MSPP Prise en charge de la mère
+${project.parent.artifactId}.report.antenatal.reportDescription=Rapport de Prise en charge de la mère demandé par le MSPP à Haiti
+
+${project.parent.artifactId}.report.antenatalGestation.reportName=Grossesse
+${project.parent.artifactId}.report.antenatalGestation.reportDescription=Rapport de grossesse demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.antenatalGestation.firstVisit.label=1ère visite
+${project.parent.artifactId}.report.antenatalGestation.secondVisit.label=2ème visite
+${project.parent.artifactId}.report.antenatalGestation.thirdVisit.label=3ème visite
+${project.parent.artifactId}.report.antenatalGestation.fourthVisit.label=4ème visite
+${project.parent.artifactId}.report.antenatalGestation.fifthVisit.label=5ème visite et +
+${project.parent.artifactId}.report.antenatalGestation.total.label=Total
+${project.parent.artifactId}.report.antenatalGestation.gestationWeeks=weeks of pregnancy
+
+${project.parent.artifactId}.report.antenatalRisks.reportName=Risques prénatals
+${project.parent.artifactId}.report.antenatalRisks.reportDescription=Rapport de risques prénatals demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.antenatalRisks.all.label=All
+${project.parent.artifactId}.report.antenatalRisks.riskyPregnancy=Nombre de grossesses à risque
+${project.parent.artifactId}.report.antenatalRisks.ironDefANC=Cas d'anémie carentielle chez les femmes enceintes
+${project.parent.artifactId}.report.antenatalRisks.prenatalIron=Femmes enceintes recevant du fer folate
+${project.parent.artifactId}.report.antenatalRisks.prenatalIronDef=Femmes enceintes traitées pour anémie carentielle
+${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Femmes enceintes disposant d'un plan d'accouchement
+${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Femmes enceintes avec malaria confirmée traitées à la chloroquine
+${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Femmes enceintes avec un périmètre brachial =<210 mm
+${project.parent.artifactId}.report.antenatalRisks.womenIron=Autres femmes recevant du fer folate
