C2C-94: Add MSPP 'Family Planning' report (#35)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -120,11 +120,33 @@ ${project.parent.artifactId}.report.emergency.0_14years=(0-14 years)
 ${project.parent.artifactId}.report.emergency.above14years=(15 years and above)
 ${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Medical and surgical emergency
 
+${project.parent.artifactId}.report.familyPlanning.reportName=MSPP Family Planning
+${project.parent.artifactId}.report.familyPlanning.reportDescription=Family Planning report required by the Haitian MSPP
+${project.parent.artifactId}.report.familyPlanning.reportName=MSPP Family Planning
+${project.parent.artifactId}.report.familyPlanning.reportDescription=Family Planning report required by Haitian MSPP
+${project.parent.artifactId}.report.familyPlanning.datasetName=Family Planning SQL Dataset
+${project.parent.artifactId}.report.familyPlanning.datasetDescription=Family Planning SQL Dataset
+
+${project.parent.artifactId}.report.familyPlanning.newUser.label=New Users
+${project.parent.artifactId}.report.familyPlanning.existentUser.label=Existent Users
+${project.parent.artifactId}.report.familyPlanning.LT25years.label=Less than 25 years
+${project.parent.artifactId}.report.familyPlanning.GT25years.label=25 years plus
+${project.parent.artifactId}.report.familyPlanning.method.label=method
+${project.parent.artifactId}.report.familyPlanning.females.label=Females
+${project.parent.artifactId}.report.familyPlanning.males.label=Males
+
+${project.parent.artifactId}.report.familyPlanning.PC.label=Mycrogynon
+${project.parent.artifactId}.report.familyPlanning.PP.label=Microlut
+${project.parent.artifactId}.report.familyPlanning.depo.label=Depo Provera
+${project.parent.artifactId}.report.familyPlanning.implant.label=Implant/Jadel
+${project.parent.artifactId}.report.familyPlanning.condoms.label=Condoms
+${project.parent.artifactId}.report.familyPlanning.total.label=Total
+
 ${project.parent.artifactId}.report.antenatal.reportName=MSPP Antenatal
-${project.parent.artifactId}.report.antenatal.reportDescription=MSPP Antenatal report required by Haitian MoH to any clinic in Haiti
+${project.parent.artifactId}.report.antenatal.reportDescription=MSPP Antenatal report required by the Haitian MSPP
 
 ${project.parent.artifactId}.report.antenatalGestation.reportName=MSPP Antenatal Gestation
-${project.parent.artifactId}.report.antenatalGestation.reportDescription=MSPP Antenatal Gestation report required by Haitian MoH to any clinic in Haiti
+${project.parent.artifactId}.report.antenatalGestation.reportDescription=MSPP Antenatal Gestation report required by the Haitian MSPP
 ${project.parent.artifactId}.report.antenatalGestation.firstVisit.label=First Visit
 ${project.parent.artifactId}.report.antenatalGestation.secondVisit.label=Second Visit
 ${project.parent.artifactId}.report.antenatalGestation.thirdVisit.label=Third Visit
@@ -134,7 +156,7 @@ ${project.parent.artifactId}.report.antenatalGestation.total.label=Total
 ${project.parent.artifactId}.report.antenatalGestation.gestationWeeks=weeks of pregnancy
 
 ${project.parent.artifactId}.report.antenatalRisks.reportName=MSPP Antenatal Risks
-${project.parent.artifactId}.report.antenatalRisks.reportDescription=MSPP Antenatal Risks report required by Haitian MoH to any clinic in Haiti
+${project.parent.artifactId}.report.antenatalRisks.reportDescription=MSPP Antenatal Risks report required by the Haitian MSPP
 ${project.parent.artifactId}.report.antenatalRisks.all.label=All
 ${project.parent.artifactId}.report.antenatalRisks.riskyPregnancy=Risky Pregnancy
 ${project.parent.artifactId}.report.antenatalRisks.ironDefANC=Iron Def and ANC Visit
@@ -143,4 +165,4 @@ ${project.parent.artifactId}.report.antenatalRisks.prenatalIronDef=Prenatal visi
 ${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Mothers with birth plan
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Prenatal visit + malaria test positive + Chloroqine co
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Prenatal + MUAC =<21cm
-${project.parent.artifactId}.report.antenatalRisks.womenIron=Women + fer folate co prescribed
+${project.parent.artifactId}.report.antenatalRisks.womenIron=Women + Fer folate Co prescribed
