--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -65,6 +65,7 @@ ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory6.label=25-
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.ageCategory7.label=50 an et +
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.total.label=Total
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.totalReferredCases.label=Total des cas référés
+
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.males.label=M
 ${project.parent.artifactId}.report.newEpisodesOfDiseases.females.label=F
 
@@ -116,6 +117,24 @@ ${project.parent.artifactId}.report.emergency.girls=Filles
 ${project.parent.artifactId}.report.emergency.0_14years=(0-14 ans)
 ${project.parent.artifactId}.report.emergency.above14years=(15 ans et plus)
 ${project.parent.artifactId}.report.emergency.medicalAndSurgicalEmergency=Urgences médico-chirurgicales
+
+${project.parent.artifactId}.report.familyPlanning.reportName=MSPP Planification familiale
+${project.parent.artifactId}.report.familyPlanning.reportDescription=Rapport de Répartition des visites demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.familyPlanning.datasetName=Ensemble de données SQL de planification familiale
+${project.parent.artifactId}.report.familyPlanning.datasetDescription=Ensemble de données SQL de planification familiale
+${project.parent.artifactId}.report.familyPlanning.newUser.label=Nouvelles utilisatrices
+${project.parent.artifactId}.report.familyPlanning.existentUser.label=Toutes utilisatrices
+${project.parent.artifactId}.report.familyPlanning.LT25years.label=moins de 25 ans
+${project.parent.artifactId}.report.familyPlanning.GT25years.label=25 ans et plus
+${project.parent.artifactId}.report.familyPlanning.method.label=Méthode
+${project.parent.artifactId}.report.familyPlanning.females.label=Femmes
+${project.parent.artifactId}.report.familyPlanning.males.label=Hommes
+${project.parent.artifactId}.report.familyPlanning.PC.label=PC/Mycrogynon
+${project.parent.artifactId}.report.familyPlanning.PP.label=PP/Microlut
+${project.parent.artifactId}.report.familyPlanning.depo.label=Depo Provera
+${project.parent.artifactId}.report.familyPlanning.implant.label=Implant/Jadel
+${project.parent.artifactId}.report.familyPlanning.condoms.label=Condoms
+${project.parent.artifactId}.report.familyPlanning.total.label=Total
 
 ${project.parent.artifactId}.report.antenatal.reportName=MSPP Prise en charge de la mère
 ${project.parent.artifactId}.report.antenatal.reportDescription=Rapport de Prise en charge de la mère demandé par le MSPP à Haiti
