C2C-88: Add MSSP 'Vaccination' report (#29)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -166,3 +166,18 @@ ${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Mothers with 
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Prenatal visit + malaria test positive + Chloroqine co
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Prenatal + MUAC =<21cm
 ${project.parent.artifactId}.report.antenatalRisks.womenIron=Women + Fer folate Co prescribed
+${project.parent.artifactId}.report.vaccination.reportName=Vaccination
+${project.parent.artifactId}.report.vaccination.all.reportName=Vaccination
+${project.parent.artifactId}.report.vaccination.reportName=MSPP Vaccination
+${project.parent.artifactId}.report.vaccination.all.reportName=MSPP Vaccination
+${project.parent.artifactId}.report.vaccination.reportDescription=Vaccination report required by the Haitian MSPP
+${project.parent.artifactId}.report.vaccination.title.label=Vaccination
+${project.parent.artifactId}.report.vaccination.prenatal.label=Prenatal
+${project.parent.artifactId}.report.vaccination.ageCategory1.label=0-11 months
+${project.parent.artifactId}.report.vaccination.ageCategory2.label=12-23 months
+
+${project.parent.artifactId}.report.vaccination.males.label=M
+${project.parent.artifactId}.report.vaccination.females.label=F
+
+${project.parent.artifactId}.report.ecv.reportName=MSPP ECV
+${project.parent.artifactId}.report.ecv.reportDescription=Fully Vaccinated Child (ECV) report required by the Haitian MSPP
