--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -160,3 +160,18 @@ ${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Femmes encein
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Femmes enceintes avec malaria confirmée traitées à la chloroquine
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Femmes enceintes avec un périmètre brachial =<210 mm
 ${project.parent.artifactId}.report.antenatalRisks.womenIron=Autres femmes recevant du fer folate
+${project.parent.artifactId}.report.vaccination.reportName=Vaccination
+${project.parent.artifactId}.report.vaccination.all.reportName=Vaccination
+${project.parent.artifactId}.report.vaccination.reportName=MSPP Vaccination
+${project.parent.artifactId}.report.vaccination.all.reportName=MSPP Vaccination
+${project.parent.artifactId}.report.vaccination.reportDescription=Rapport de Vaccination demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.vaccination.title.label=Vaccination
+${project.parent.artifactId}.report.vaccination.prenatal.label=Prénatal
+${project.parent.artifactId}.report.vaccination.ageCategory1.label=0-11 mois
+${project.parent.artifactId}.report.vaccination.ageCategory2.label=12-23 mois
+
+${project.parent.artifactId}.report.vaccination.males.label=Hommes
+${project.parent.artifactId}.report.vaccination.females.label=Femmes
+
+${project.parent.artifactId}.report.ecv.reportName=MSPP ECV
+${project.parent.artifactId}.report.ecv.reportDescription=Rapport des Enfants Complètement Vaccinés (ECV) demandé par le MSPP à Haiti
